--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <table>
             <tr>
                 <td>
-                    <img src="svg/myface.png" height="140px" style="border-radius: 50%;">
+                    <img src="https://drive.google.com/file/d/1Fiw0sb_W1nouEzVRTm0jXY9_q3RWw3Fm/view?usp=sharing" height="140px" style="border-radius: 50%;">
                 </td>
                 
                 <td>
